# libdtf

./: Cargo.toml  README.md  test_data copy.yaml  test_data.json  test_data.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
benches/: benches.rs
src/: array_checker.rs  diff_types.rs  key_checker.rs  lib.rs  type_checker.rs  value_checker.rs
src/core/: diff_types.rs
src/json/: array_checker.rs  diff_types.rs  key_checker.rs  mod.rs  type_checker.rs  value_checker.rs
src/yaml/: array_checker.rs  diff_types.rs  key_checker.rs  mod.rs  type_checker.rs  value_checker.rs
