[package]
name = "libdtf"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde_yaml = "0.9"
serde = { version = "1.0.160", features = ["derive"]}

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benches"
harness = false
